<resources>
    <string name="app_name">Calculadora</string>
    <string name="insiraOPrimeiroNumero">Insira o primeiro número</string>
    <string name="insiraOSegundoNumero">Insira o segundo número</string>
    <string name="soma">+</string>
    <string name="subtracao">-</string>
    <string name="multiplicacao">x</string>
    <string name="divisao">/</string>
    <string name="resultado">Resultado</string>
</resources>